[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnradar"
version = "2.0.0b1"
description = "Python SDK for the VulnRadar security scanning API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
  {name = "FedxD", email = "official@fedxd.net"}
]

keywords = ["security", "vulnerability", "scanning", "sdk", "api"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

dependencies = [
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/VulnRadar/Python-SDK"
Repository = "https://github.com/VulnRadar/Python-SDK"
"Bug Tracker" = "https://github.com/VulnRadar/Python-SDK/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vulnradar*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
]

